--- a/frontend/src/app/components/views/categoria/categoria-read/categoria-read.component.html
+++ b/frontend/src/app/components/views/categoria/categoria-read/categoria-read.component.html
@@ -3,6 +3,9 @@
         <h1>Categoria</h1>
     </div>
 
+
+    <button class="mat-elevation-z8" (click)="navegarParaCategoriaCreate()" mat-raised-button color="primary">Nova Categoria</button>
+
     <div class="mat-elevation-z8 content-table">
 
         <table class="table" mat-table [dataSource]="categorias">
@@ -26,15 +29,26 @@
                 <td mat-cell *matCellDef="let row"> {{row.descricao}} </td>
             </ng-container>
 
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="acoes">
-                <th mat-header-cell *matHeaderCellDef> Ações</th>
+            <ng-container matColumnDef="livros">
+                <th mat-header-cell *matHeaderCellDef> Livros</th>
                 <td mat-cell *matCellDef="let row">
 
-                    <a href="#">
+                    <a class="livros" href="#">
+                        <i class="material-icons">book</i>
+                    </a>
+
+                </td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="acoes">
+                <th class="mat-header" mat-header-cell *matHeaderCellDef> Ações</th>
+                <td mat-cell *matCellDef="let row">
+
+                    <a class="edit" href="#">
                         <i class="material-icons">edit</i>
                     </a>
-                    <a href="#">
+                    <a class="delete" routerLink="delete/{{row.id}}">
                         <i class="material-icons">delete</i>
                     </a>
                 </td>
