--- a/frontend/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/frontend/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -1,14 +1,14 @@
 <div class="content">
     <div class="title">
-        <h1>Categoria</h1>
+        <h1>LIVROS</h1>
     </div>
 
 
-    <button class="mat-elevation-z8" (click)="navegarParaCategoriaCreate()" mat-raised-button color="primary">Nova Categoria</button>
+    <button class="mat-elevation-z8"  mat-raised-button color="primary">Novo Livro</button>
 
     <div class="mat-elevation-z8 content-table">
 
-        <table class="table" mat-table [dataSource]="categorias">
+        <table class="table" mat-table >
 
 
             <!-- Position Column -->
@@ -18,22 +18,17 @@
             </ng-container>
 
             <!-- Name Column -->
-            <ng-container matColumnDef="nome">
-                <th mat-header-cell *matHeaderCellDef> Nome</th>
-                <td mat-cell *matCellDef="let row"> {{row.nome}} </td>
+            <ng-container matColumnDef="titulo">
+                <th mat-header-cell *matHeaderCellDef> TITULO</th>
+                <td mat-cell *matCellDef="let row"> {{row.titulo}} </td>
             </ng-container>
 
-            <!-- Weight Column -->
-            <ng-container matColumnDef="descricao">
-                <th mat-header-cell *matHeaderCellDef> Descrição</th>
-                <td mat-cell *matCellDef="let row"> {{row.descricao}} </td>
-            </ng-container>
 
             <ng-container matColumnDef="livros">
-                <th mat-header-cell *matHeaderCellDef> Livros</th>
+                <th mat-header-cell *matHeaderCellDef> LER LIVRO</th>
                 <td mat-cell *matCellDef="let row">
 
-                    <a class="livros" routerLink="{{row.id}}/livros">
+                    <a class="livros" >
                         <i class="material-icons">book</i>
                     </a>
 
@@ -45,10 +40,10 @@
                 <th class="mat-header" mat-header-cell *matHeaderCellDef> Ações</th>
                 <td mat-cell *matCellDef="let row">
 
-                    <a class="edit" routerLink="update/{{row.id}}">
+                    <a class="edit" href="#">
                         <i class="material-icons">edit</i>
                     </a>
-                    <a class="delete" routerLink="delete/{{row.id}}">
+                    <a class="delete" href="#">
                         <i class="material-icons">delete</i>
                     </a>
                 </td>
@@ -62,3 +57,4 @@
 
 
 </div>
+
