--- a/frontend/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/frontend/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -4,11 +4,11 @@
     </div>
 
 
-    <button class="mat-elevation-z8"  mat-raised-button color="primary">Novo Livro</button>
+    <button class="mat-elevation-z8" (click)="navegarParaCriarLivro()"  mat-raised-button color="primary">Novo Livro</button>
 
     <div class="mat-elevation-z8 content-table">
 
-        <table class="table" mat-table >
+        <table class="table" mat-table [dataSource]="livros">
 
 
             <!-- Position Column -->
@@ -40,7 +40,7 @@
                 <th class="mat-header" mat-header-cell *matHeaderCellDef> Ações</th>
                 <td mat-cell *matCellDef="let row">
 
-                    <a class="edit" href="#">
+                    <a class="edit" routerLink="{{row.id}}/update">
                         <i class="material-icons">edit</i>
                     </a>
                     <a class="delete" href="#">
