--- a/frontend/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/frontend/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -28,7 +28,7 @@
                 <th mat-header-cell *matHeaderCellDef> LER LIVRO</th>
                 <td mat-cell *matCellDef="let row">
 
-                    <a class="livros" >
+                    <a class="livros" routerLink="{{row.id}}/read">
                         <i class="material-icons">book</i>
                     </a>
 
